--- a/it/progetti/parco-della-pace.html
+++ b/it/progetti/parco-della-pace.html
@@ -41,15 +41,6 @@
   <div class="desktop-menu">
     <a href="../studio">Studio</a>
     <a href="../progetti">Progetti</a>
-    <!--<a href="#" onclick="toggleMenu('servicesMenu', event);">Progetti</a>
-    <ul id="servicesMenu" class="dropdown-menu">
-      <li><a href="progetti/index">Tutti i progetti</a></li>
-      <li><a href="progetti/index.html?filter=section1">Rigenerazione spazi urbani</a></li>
-      <li><a href="progetti/index.html?filter=section2">Parchi e giardini</a></li>
-      <li><a href="progetti/index.html?filter=section3">Riqualificazione ambientale e paesaggistica</a></li>
-      <li><a href="progetti/index.html?filter=section4">Inserimento ambientale di infrastrutture</a></li>
-      <li><a href="progetti/index.html?filter=section5">Architettura</a></li>
-    </ul>-->
     <a href="../news">News</a>
     <a href="../contatti">Contatti</a>
   </div>
@@ -59,17 +50,6 @@
 <div id="mySidenav" class="sidenav">
   <a href="../studio">Studio</a>
   <a href="../progetti">Progetti</a>
-  <!--<div class="sub-links">
-    <a href="#" onclick="toggleSubNav()">Progetti</a>
-    <div id="subNavLinks" class="sub-nav-links">
-      <a href="progetti/index">Tutti i progetti</a>
-      <a href="progetti/index.html?filter=section1">Rigenerazione spazi urbani</a>
-      <a href="progetti/index.html?filter=section2">Parchi e giardini</a>
-      <a href="progetti/index.html?filter=section3">Riqualificazione ambientale e paesaggistica</a>
-      <a href="progetti/index.html?filter=section4">Inserimento ambientale di infrastrutture</a>
-      <a href="progetti/index.html?filter=section5">Architettura</a>
-    </div>
-  </div>-->
   <a href="../news">News</a>
   <a href="../contatti">Contatti</a>
   <div class="lang-switch" id="LS2">
@@ -86,31 +66,43 @@
 </div>
 
 <main>
-
-<!--#1-->
-  <section class="cartouche">
-    <ul>
-      <li><b>Cliente</b><br>Comune di Vicenza</li>
-      <li><b>Partner</b><br>ITS S.r.l., EMF, Franco Zagari</li>
-      <li><b>Fase di progetto</b><br>Progettazione completa, DL</li>
-      <li><b>Tipologia</b><br>Riqualificazione urbana</li>
-      <li><b>Superficie</b><br>650.000 mq</li>
-      <li><b>Anno</b><br>2015 - in corso</li>
-      <li><b>Luogo</b><br>Vicenza</li>
-      <li><b>Team</b><br>Arch. Gaetano Selleri, Arch. paesaggista Lorenzo Baldini, landscape Designer Sara Valassina, et al.</li>
-    </ul>
+<!--#0-->
+  <section class="accueil-page">
+    <img src="../../library/progetti/parco-della-pace/pdp-17.jpg" alt="Parco della Pace - Vicenza">
   </section>
 <!--#1-->
   <section class="mono">
     <h2>Il Parco Della Pace</h2>
-    <h3>Parco urbano nato dalla riconversione dell’ex aeroporto Dal Molin</h3>
-    <p>Il Parco della Pace è il cuore verde di Vicenza e si prefigge l’ambizioso obiettivo di diventare una vera e propria macchina ecologica oltre che una destinazione in grado di attrarre visitatori da tutto il territorio circostante.</p>
-    <p>Questo spazio pubblico di nuova generazione è un invito ad esplorare e abbracciare la natura in una città, un’oasi per attività all’aperto, sport, eventi, un centro vibrante di manifestazioni culturali e, soprattutto, un contenitore di biodiversità in cui la bellezza della natura regna sovrana. Il Parco della Pace è una soluzione strategica per affrontare le sfide del cambiamento climatico, promuovendo servizi ecosistemici e soluzioni basate sulla natura. Con ben 8 km di canali e 70.000 mq di zone umide progettate per prevenire inondazioni future, il parco è una testimonianza tangibile dell’impegno dei progettisti nei confronti dell’ambiente. Questo approccio non solo migliora il drenaggio urbano, ma crea nuovi habitat per la fauna e la flora locali che, grazie anche al disegno del paesaggio, cambieranno il modo in cui interagiamo con la natura. Infine, la riconversione degli hangar dell’ex aeroporto Dal Molin, ha portato alla realizzazione di un hub culturale, con musei e spazi polifunzionali dedicati all’arte.</p>
+    <p>Il progetto riguarda una superficie complessiva di 650.000 m2 corrispondente a oltre metà dell’ex infrastruttura dismessa dell’Aeroporto Dal Molin. La grande dimensione e le caratteristiche specifiche del parco lo candidano a diventare un parco metropolitano, un polo attrattivo a scala territoriale. . Questa opera di trasformazione urbanistica e paesaggistica non è solo un tentativo di riconquista della natura dove l’acqua e la vegetazione sono protagoniste indiscusse, ma ha anche l’ambizione di essere un nuovo fulcro del sistema del verde della città di Vicenza, fungendo da congiunzione tra la città storica, i comuni adiacenti e un'area territoriale ancora più vasta. ). Il progetto si inserisce all’interno del contesto di pianificazione urbanistica territoriale del Veneto e si caratterizza come un grande intervento di valorizzazione, promozione e salvaguardia del territorio e del suo mosaico ecologico, esso è caratterizzato da zone umide, boschetti igrofili e planiziali, filari e siepi, prati selvaggi, orti. In questo senso il progetto è concepito nell’ottica di una Green Infrastructure, forte nelle sue interconnessioni territoriali. Come Infrastruttura verde, calcolata ingegneristicamente, il nuovo parco sarà in grado di erogare servizi ecosistemici a 360°, e grazie all’integrazione di soluzioni innovative come I SUDS (Sistemi Di Drenaggio Urbano Sostenibile) e le cosiddette Nature Based Solutions (NBS) contribuirà nella mitigazione gli effetti deleteri del cambiamento climatico e promuoverà la sostenibilità ambientale.</p>
+    <p>Dal punto di vista tecnico-ingegneristico partendo da un’area perfettamente piana è stata eseguita una movimentazione di 240.000 m³ di terreno con relativo riutilizzo al fine di  creare una nuova grande varietà di paesaggi e luoghi: canali, bacini, interventi di forestazione urbana che creano nuovi boschi, vaste praterie, aree gioco e aree dedicate allo sport, orti urbani e spazi spazi dedicati a eventi e alla cultura e alla didattica tramite la predisposizione di pannelli informativi e segnaletica per spiegare il valore ecologico del parco.</p>
+    <p>Il parco è stato progettato come un grande bacino di laminazione, capace di contenere e rilasciare lentamente fino a 100.000 metri cubi d'acqua. L'efficiente gestione delle risorse idriche, unita all'istituzione di nuovi ecosistemi umidi, va oltre il semplice drenaggio urbano: crea infatti nuovi spazi vitali per una ricca biodiversità, animale e vegetale. Grazie a questa fitta rete d’acqua, infatti, la fauna locale ha avuto l'opportunità di ripopolare rapidamente l’ambito, che si è arricchito non solo di uccelli legati all'ambiente acquatico, ma anche di altre specie ornitiche, anfibi, pesci, molluschi, artropodi insetti e mammiferi di piccola taglia.</p>
+    <p>Infine il progetto ha prestato particolare attenzione nel preservare integralmente le preesistenze, valorizzando anche la dimensione storica del sito e il riuso dell’esistente promuovendo un approccio sostenibile legato al ciclo di vita dei manufatti. In corrispondenza dell’ingresso principale del Parco, presso l'area denominata "Porta Est" è stato realizzato il recupero e la trasformazione degli ex hangar aeroportuali in spazi dedicati alla cultura, all'associazionismo e al tempo libero.</p>
   </section>
-<!--#1-->
+<!--#2-->
+  <section class="mono">
+    <ul class="cartouche">
+      <li><b>Cliente</b><br>Comune di Vicenza</li>
+      <li><b>Luogo</b><br>Vicenza</li>
+      <li><b>Anno</b><br>2017 - 2022</li>
+      <li><b>Superficie</b><br>650.000 mq</li>
+      <li><b>Stato</b><br>In corso di realizzazione</li>
+      <li><b>Tipologia</b><br>Riqualificazione ambientale e paesaggistica</li>
+      <li><b>Partners</b><br>ITS Engineering S.r.l., EMF Estudi Marti Franch, Franco Zagari, Geol. Gino Lucchetta, Aspro Studio</li>
+      <li><b>Team</b><br>Gaetano Selleri, Benedetto Selleri, Lorenzo Baldini, Sara Vergani, Sara Valassina</li>
+      <li><b>Importo lavori</b><br>9.700.000 eur</li>
+      <li><b>Dati chiave</b><br>9km di canali, 52.000 mq di laghi, 70.000 mq di aree umide allagabili,  nuovi boschi grazie ad interventi di forestazione urbana (58.000 mq di boschi igrofili e 67.000 boschi mesofili), vaste praterie (360.000mq prati suddivisi in: prati alti e fioriti, prati rasati, prati umidi eseguiti con specie acquatiche e igrofile locali anche rare, e un grande “prato selvaggio), messa a dimora di 8.600 piantine forestali (alberi e arbusti), e 1.400 piante sviluppate per filari regolari e irregolari</li>
+    </ul>
+  </section>
+<!--#3-->
   <section class="mono">
     <div class="box">
-      <img src="../../library/home/pan-home-chisiamo.jpg" alt="Parco della Pace - Vicenza">
+      <img src="../../library/progetti/parco-della-pace/pdp-1.jpg" alt="Parco della Pace - Vicenza">
+      <img src="../../library/progetti/parco-della-pace/pdp-2.jpg" alt="Parco della Pace - Vicenza">
+      <img src="../../library/progetti/parco-della-pace/pdp-3.jpg" alt="Parco della Pace - Vicenza">
+      <img src="../../library/progetti/parco-della-pace/pdp-4.jpg" alt="Parco della Pace - Vicenza">
+      <img src="../../library/progetti/parco-della-pace/pdp-5.jpg" alt="Parco della Pace - Vicenza">
+      <img src="../../library/progetti/parco-della-pace/pdp-6.jpg" alt="Parco della Pace - Vicenza">
+      <img src="../../library/progetti/parco-della-pace/pdp-7.jpg" alt="Parco della Pace - Vicenza">
     </div>
   </section>
 </main>
@@ -122,14 +114,15 @@
 
   <p class="note"><a href="https://www.facebook.com/panassociati/">Facebook</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="https://www.youtube.com/channel/UCbgIvdVyFjuWLhSequXO4Pg">Youtube</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="https://it.linkedin.com/company/pan-associati">LinkedIn</a></p>
 
+  <div style="height: 25px;"></div>
   <a href="https://www.accredia.it/"><img class="svg-img accred" src="../../elements/accredia.svg"></a>
   <a href="https://www.sgs.com/it-it"><img class="svg-img accred" src="../../elements/sgs.svg"></a>
-
-  <p class="note">Qualità ISO 9001 - 2008. Questa certificazione di qualità consente alla società di garantire l’alta qualità del servizio offerto ai loro clienti.</p>
+  <p class="note">Qualità ISO 9001 - 2008.<br>Questa certificazione di qualità consente alla società di garantire l’alta qualità del servizio offerto ai loro clienti.</p>
+  <div style="height: 25px;"></div>
 
   <p class="note">PAN Associati s.r.l.&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;© Copyright 2024&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a class="text-link" href="privacy">Privacy e Cookie Policy</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;Construit avec &#9825; par <a href="https://baptistelevaux.github.io/">BSL</a></p>
 </footer>
 
-<script src="../../script-page.js"></script>
+<script src="../../scripts/script-home.js"></script>
 </body>
 </html>
