--- a/it/studio.html
+++ b/it/studio.html
@@ -33,23 +33,13 @@
     <a href="#">IT</a>
   </div>
   <div class="DarkModeButton" id="DMB1">
-    <input type="checkbox" id="darkModeToggle" class="darkModeToggle">
-    <label for="darkModeToggle" class="darkModeLabel">
-    <div class="darkModeSlider"></div>
+    <input type="checkbox" id="darkModeToggle1" class="darkModeToggle">
+    <label for="darkModeToggle1" class="darkModeLabel">
     </label>
   </div>
   <div class="desktop-menu">
     <a href="studio">Studio</a>
     <a href="progetti">Progetti</a>
-    <!--<a href="#" onclick="toggleMenu('servicesMenu', event);">Progetti</a>
-    <ul id="servicesMenu" class="dropdown-menu">
-      <li><a href="progetti/index">Tutti i progetti</a></li>
-      <li><a href="progetti/index.html?filter=section1">Rigenerazione spazi urbani</a></li>
-      <li><a href="progetti/index.html?filter=section2">Parchi e giardini</a></li>
-      <li><a href="progetti/index.html?filter=section3">Riqualificazione ambientale e paesaggistica</a></li>
-      <li><a href="progetti/index.html?filter=section4">Inserimento ambientale di infrastrutture</a></li>
-      <li><a href="progetti/index.html?filter=section5">Architettura</a></li>
-    </ul>-->
     <a href="news">News</a>
     <a href="contatti">Contatti</a>
   </div>
@@ -59,17 +49,6 @@
 <div id="mySidenav" class="sidenav">
   <a href="studio">Studio</a>
   <a href="progetti">Progetti</a>
-  <!--<div class="sub-links">
-    <a href="#" onclick="toggleSubNav()">Progetti</a>
-    <div id="subNavLinks" class="sub-nav-links">
-      <a href="progetti/index">Tutti i progetti</a>
-      <a href="progetti/index.html?filter=section1">Rigenerazione spazi urbani</a>
-      <a href="progetti/index.html?filter=section2">Parchi e giardini</a>
-      <a href="progetti/index.html?filter=section3">Riqualificazione ambientale e paesaggistica</a>
-      <a href="progetti/index.html?filter=section4">Inserimento ambientale di infrastrutture</a>
-      <a href="progetti/index.html?filter=section5">Architettura</a>
-    </div>
-  </div>-->
   <a href="news">News</a>
   <a href="contatti">Contatti</a>
   <div class="lang-switch" id="LS2">
@@ -77,12 +56,10 @@
     <a href="#">IT</a>
   </div>
   <div class="DarkModeButton" id="DMB2">
-    <input type="checkbox" id="darkModeToggle" class="darkModeToggle">
-    <label for="darkModeToggle" class="darkModeLabel">
-    <div class="darkModeSlider"></div>
+    <input type="checkbox" id="darkModeToggle2" class="darkModeToggle">
+    <label for="darkModeToggle2" class="darkModeLabel">
     </label>
   </div>
-  <p>&#x263D;</p>
 </div>
 
 <main>
@@ -293,14 +270,15 @@
 
   <p class="note"><a href="https://www.facebook.com/panassociati/">Facebook</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="https://www.youtube.com/channel/UCbgIvdVyFjuWLhSequXO4Pg">Youtube</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="https://it.linkedin.com/company/pan-associati">LinkedIn</a></p>
 
+  <div style="height: 25px;"></div>
   <a href="https://www.accredia.it/"><img class="svg-img accred" src="../elements/accredia.svg"></a>
   <a href="https://www.sgs.com/it-it"><img class="svg-img accred" src="../elements/sgs.svg"></a>
-
-  <p class="note">Qualità ISO 9001 - 2008. Questa certificazione di qualità consente alla società di garantire l’alta qualità del servizio offerto ai loro clienti.</p>
+  <p class="note">Qualità ISO 9001 - 2008.<br>Questa certificazione di qualità consente alla società di garantire l’alta qualità del servizio offerto ai loro clienti.</p>
+  <div style="height: 25px;"></div>
 
   <p class="note">PAN Associati s.r.l.&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;© Copyright 2024&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a class="text-link" href="privacy">Privacy e Cookie Policy</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;Construit avec &#9825; par <a href="https://baptistelevaux.github.io/">BSL</a></p>
 </footer>
 
-<script src="../script-page2.js"></script>
+<script src="../scripts/script-page-shower.js"></script>
 </body>
 </html>
