--- a/it/news.html
+++ b/it/news.html
@@ -33,9 +33,8 @@
     <a href="#">IT</a>
   </div>
   <div class="DarkModeButton" id="DMB1">
-    <input type="checkbox" id="darkModeToggle" class="darkModeToggle">
-    <label for="darkModeToggle" class="darkModeLabel">
-    <div class="darkModeSlider"></div>
+    <input type="checkbox" id="darkModeToggle1" class="darkModeToggle">
+    <label for="darkModeToggle1" class="darkModeLabel">
     </label>
   </div>
   <div class="desktop-menu">
@@ -57,12 +56,10 @@
     <a href="#">IT</a>
   </div>
   <div class="DarkModeButton" id="DMB2">
-    <input type="checkbox" id="darkModeToggle" class="darkModeToggle">
-    <label for="darkModeToggle" class="darkModeLabel">
-    <div class="darkModeSlider"></div>
+    <input type="checkbox" id="darkModeToggle2" class="darkModeToggle">
+    <label for="darkModeToggle2" class="darkModeLabel">
     </label>
   </div>
-  <p>&#x263D;</p>
 </div>
 
 <main>
