--- a/it/index.html
+++ b/it/index.html
@@ -132,7 +132,7 @@
     </div>
     <div>
       <h1>Chi siamo</h1>
-      <h2><span>P</span>rogetazzione<br><span>A</span>rchitettura <span>+</span><br><span>N</span>atura</h2>
+      <h2>Progetazzione<br>Architettura +<br>N>atura</h2>
       <p>PAN associati S.R.L. è una società fondata nel 2001 costituita da un gruppo multidisciplinare di professionisti che operano nei campi della progettazione architettonica e del paesaggio, fino alla pianificazione territoriale.</p>
       <p>La nostra missione è rivitalizzare spazi degradati, convertendoli in aree vivibili e sostenibili che siano di valore per le comunità locali.</p>
       <p>Vediamo in questi spazi un'opportunità per migliorare la vita urbana, creare nuovi habitat ed ecosistemi, favorire la biodiversità, e apportare benefici ecologici attraverso infrastrutture che offrano servizi ecosistemici. Ci impegniamo nella lotta contro i cambiamenti climatici adottando strategie di progettazione ispirate alle soluzioni basate sulla natura (Nature Based Solutions, NBS).</p>
