--- a/it/news.html
+++ b/it/news.html
@@ -70,36 +70,29 @@
     <button class="show-all-btn showSectionButton">Tutte le news</button>
     <button class="filter-btn showSectionButton" data-filter="section1">Eventi</button>
     <button class="filter-btn showSectionButton" data-filter="section2">Pubblicazioni</button>
-    <button class="filter-btn showSectionButton" data-filter="section3">Articoli</button>
-    <button class="filter-btn showSectionButton" data-filter="section4">Premi</button>
+    <button class="filter-btn showSectionButton" data-filter="section3">Premi</button>
   </section>
+
+  <div class="thumbnail-shower">
 <!--#2-->
-  <section class="mono news-section section2">
-      <h1>Pubblicazione</h1>
-      <h3>Top Scape Paysage n° 53</h3>
-      <p>Parco della Pace In ipsum tortor, eleifend at sagittis vitae, ullamcorper vitae mauris. Cras ac viverra ante. Aliquam erat volutpat.</p>
-      <div class="box">
-        <a href="404" class="classic-link">Scopri di <span>+</span></a>
-      </div>
-  </section>
+  <section class="thumbnail news-section section2"><a class="thumb" href="#">
+    <p class="cache">+</p>
+    <img src="../library/progetti/parco-della-pace/pdp-17.jpg" alt="Parco della Pace - Vicenza">
+    <p>Top Scape Paysage n° 53</p><p class="quote">Pubblicazione</p>
+  </a></section>
 <!--#3-->
-  <section class="mono news-section section2">
-      <h1>Pubblicazione</h1>
-      <h3>Rivista Industria delle costruzioni n°493</h3>
-      <p>Parco della Pace In ipsum tortor, eleifend at sagittis vitae, ullamcorper vitae mauris. Cras ac viverra ante. Aliquam erat volutpat.</p>
-      <div class="box">
-        <a href="404" class="classic-link">Scopri di <span>+</span></a>
-      </div>
-  </section>
+  <section class="thumbnail news-section section2"><a class="thumb" href="#">
+    <p class="cache">+</p>
+    <img src="../library/progetti/parco-della-pace/pdp-18.jpg" alt="Parco della Pace - Vicenza">
+    <p>Rivista Industria delle costruzioni n°493</p><p class="quote">Pubblicazione</p>
+  </a></section>
 <!--#4-->
-  <section class="mono news-section section2">
-      <h1>Pubblicazione</h1>
-      <h3>Top Scape Paysage n° 46</h3>
-      <p>Parco della Pace In ipsum tortor, eleifend at sagittis vitae, ullamcorper vitae mauris. Cras ac viverra ante. Aliquam erat volutpat.</p>
-      <div class="box">
-        <a href="404" class="classic-link">Scopri di <span>+</span></a>
-      </div>
-  </section>
+  <section class="thumbnail news-section section2"><a class="thumb" href="#">
+    <p class="cache">+</p>
+    <img src="../library/progetti/parco-della-pace/pdp-19.jpg" alt="Parco della Pace - Vicenza">
+    <p>Top Scape Paysage n° 46</p><p class="quote">Pubblicazione</p>
+  </a></section>
+</div>
 </main>
 
 <footer>
