--- a/it/studio.html
+++ b/it/studio.html
@@ -258,6 +258,7 @@
         <textarea id="message" name="message" placeholder="Ciao associati!" required></textarea>
         <label class="file-label" for="document">Carica un curriculum</label>
         <input type="file" id="document" name="document" accept=".pdf,.doc,.docx" required>
+        &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
         <input class="send" type="submit" value="Invia candidatura">
       </form>
   </section>
