--- a/it/news.html
+++ b/it/news.html
@@ -77,13 +77,13 @@
 <!--#2-->
   <section class="thumbnail news-section section2"><a class="thumb" href="#">
     <p class="cache">+</p>
-    <img src="../library/progetti/parco-della-pace/pdp-17.jpg" alt="Parco della Pace - Vicenza">
+    <img src="../library/progetti/parco-della-pace/pdp-17.JPG" alt="Parco della Pace - Vicenza">
     <p>Top Scape Paysage n° 53</p><p class="quote">Pubblicazione</p>
   </a></section>
 <!--#3-->
   <section class="thumbnail news-section section2"><a class="thumb" href="#">
     <p class="cache">+</p>
-    <img src="../library/progetti/parco-della-pace/pdp-18.jpg" alt="Parco della Pace - Vicenza">
+    <img src="../library/progetti/parco-della-pace/pdp-18.JPG" alt="Parco della Pace - Vicenza">
     <p>Rivista Industria delle costruzioni n°493</p><p class="quote">Pubblicazione</p>
   </a></section>
 <!--#4-->
