--- a/it/progetti/index.html
+++ b/it/progetti/index.html
@@ -79,13 +79,13 @@
 <!--#2-->
   <section class="thumbnail news-section section1"><a class="thumb" href="parco-della-pace">
     <p class="cache">+</p>
-    <img src="../../library/progetti/parco-della-pace/pdp-17.jpg" alt="Parco della Pace - Vicenza">
+    <img src="../../library/progetti/parco-della-pace/pdp-17.JPG" alt="Parco della Pace - Vicenza">
     <p>Parco della Pace - Vicenza</p><p class="quote">2024</p>
   </a></section>
 <!--#2-->
   <section class="thumbnail news-section section1"><a class="thumb" href="parco-della-pace">
     <p class="cache">+</p>
-    <img src="../../library/progetti/parco-della-pace/pdp-18.jpg" alt="Parco della Pace - Vicenza">
+    <img src="../../library/progetti/parco-della-pace/pdp-18.JPG" alt="Parco della Pace - Vicenza">
     <p>Parco della Pace - Vicenza</p><p class="quote">2024</p>
   </a></section>
 <!--#3-->
