--- a/it/progetti/parco-della-pace.html
+++ b/it/progetti/parco-della-pace.html
@@ -65,7 +65,7 @@
 <main>
 <!--#0-->
   <section class="accueil-page">
-    <img src="../../library/progetti/parco-della-pace/pdp-17.jpg" alt="Parco della Pace - Vicenza">
+    <img src="../../library/progetti/parco-della-pace/pdp-17.JPG" alt="Parco della Pace - Vicenza">
   </section>
 <!--#1-->
   <section class="mono">
@@ -98,7 +98,6 @@
       <img src="../../library/progetti/parco-della-pace/pdp-3.jpg" alt="Parco della Pace - Vicenza">
       <img src="../../library/progetti/parco-della-pace/pdp-4.jpg" alt="Parco della Pace - Vicenza">
       <img src="../../library/progetti/parco-della-pace/pdp-5.jpg" alt="Parco della Pace - Vicenza">
-      <img src="../../library/progetti/parco-della-pace/pdp-6.jpg" alt="Parco della Pace - Vicenza">
       <img src="../../library/progetti/parco-della-pace/pdp-7.jpg" alt="Parco della Pace - Vicenza">
     </div>
   </section>
