--- a/it/news.html
+++ b/it/news.html
@@ -62,7 +62,7 @@
   </div>
 </div>
 
-<main>
+<main style="padding-bottom: 50px;">
 <!--#0-->
 
 <!--#1-->
@@ -72,27 +72,18 @@
     <button class="filter-btn showSectionButton" data-filter="section2">Pubblicazioni</button>
     <button class="filter-btn showSectionButton" data-filter="section3">Premi</button>
   </section>
-
-  <div class="thumbnail-shower">
 <!--#2-->
-  <section class="thumbnail news-section section2"><a class="thumb" href="#">
-    <p class="cache">+</p>
-    <img src="../library/progetti/parco-della-pace/pdp-17.JPG" alt="Parco della Pace - Vicenza">
-    <p>Top Scape Paysage n° 53</p><p class="quote">Pubblicazione</p>
+  <section class="mono long news-section section2"><a class="thumb" href="#">
+    <h3>Top Scape Paysage n° 53</h3><h1>Pubblicazione</h1>
   </a></section>
 <!--#3-->
-  <section class="thumbnail news-section section2"><a class="thumb" href="#">
-    <p class="cache">+</p>
-    <img src="../library/progetti/parco-della-pace/pdp-18.JPG" alt="Parco della Pace - Vicenza">
-    <p>Rivista Industria delle costruzioni n°493</p><p class="quote">Pubblicazione</p>
+  <section class="mono long news-section section2"><a class="thumb" href="#">
+    <h3>Rivista Industria delle costruzioni n°493</h3><h1>Pubblicazione</h1>
   </a></section>
 <!--#4-->
-  <section class="thumbnail news-section section2"><a class="thumb" href="#">
-    <p class="cache">+</p>
-    <img src="../library/progetti/parco-della-pace/pdp-19.jpg" alt="Parco della Pace - Vicenza">
-    <p>Top Scape Paysage n° 46</p><p class="quote">Pubblicazione</p>
+  <section class="mono long news-section section2"><a class="thumb" href="#">
+    <h3>Top Scape Paysage n° 46</h3><h1>Pubblicazione</h1>
   </a></section>
-</div>
 </main>
 
 <footer>
